intro to open ai agent sdk

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,6 @@ services:
     container_name: agentic-ai-api
     ports:
       - "5505:5505"
+    env_file:
+      - .env
     restart: unless-stopped
