feat: Implement multi-agent chat application with specialized agents
- Added frontend components for chat interface including styles and functionality.
- Created backend API routes for handling chat requests and agent orchestration.
- Developed multiple agent types: General, Technical, Student, and Triage agents for routing queries.
- Integrated health check and reset conversation features in the API.
- Configured application settings for AI model and routing keywords.
- Established a responsive design for the chat interface to enhance user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,23 @@ env/
 # OS
 .DS_Store
 Thumbs.db
+
+# Node.js / Angular
+**/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm/
+.yarn/
+package-lock.json
+
+# Angular cache and build
+**/.angular/
+**/out-tsc/
+*.tsbuildinfo
+
+# Coverage
+coverage/
+
+# Misc
+*.local
